fixed filter alignment

--- a/Client/src/components/css/filter.scss
+++ b/Client/src/components/css/filter.scss
@@ -4,7 +4,7 @@
   // border: 1px solid #ccc;
   border-radius: 20px;
   transition: background-color 0.3s;
-  width: 120%;
+  width: 113%;
 }
 
 .filter-header.open {
@@ -28,6 +28,7 @@
   font-family: Montserrat;
   font-weight: 500;
   cursor: pointer;
+  margin-bottom: 7px;
 }
 .title {
   width: 20px;
@@ -55,6 +56,10 @@
   position: relative;
   letter-spacing: 0.5px;
   line-height: 32px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding-left: 10px;
 }
 .filter-options input {
   width: 24px;
