--- a/Client/src/routes/css/takeActionPage.module.scss
+++ b/Client/src/routes/css/takeActionPage.module.scss
@@ -47,6 +47,7 @@
   align-items: center;
   justify-content: flex-start;
   padding: 6px 12px;
+  width: 282px;
 }
 .accessibility {
   flex: 1;
@@ -223,7 +224,7 @@
   height: 800px;
 }
 .frameWrapper {
-  width: 1038px;
+  width: 1338px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -303,7 +304,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  width: 120%;
+  width: 100%;
 }
 
 .buttons button {
@@ -330,9 +331,8 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: center;
   color: #1e4359;
-  padding-right: 295px;
 }
 .continueButton {
   top: 0px;
